# esxi-testing-toolkit

./: .gitignore  README.md  SECURITY.md  TODO.md  pyproject.toml  requirements.txt  tests.sh
demo/: change_welcome_message.tape  delete_snapshots_with_verbose.tape  demo.tape  get-users.tape  install.tape  list-all-vm.tape  list_command.tape
detections/: api_delete_vm_snapshots.yml  api_disable_autostart.yml  api_power_off_vm.yml  ssh_change_syslog_directory.yml  ssh_change_welcome_message.yml  ssh_delete_vm_snapshots.yml  ssh_disable_autostart.yml  ssh_disable_coredump.yml  ssh_disable_firewall.yml  ssh_enable_ssh.yml  ssh_get_all_vm_ids.yml  ssh_get_network_information.yml  ssh_get_system_info.yml  ssh_get_system_storage.yml  ssh_get_system_users.yml  ssh_modify_firewall.yml  ssh_power_off_vm.yml  ssh_unrestrict_vib_acceptance_level.yml
src/: cli.py  main.py
src/cli/: base_commands.py  host_commands.py  vm_commands.py
src/core/: authenticator.py  command_metadata.py  config_manager.py  connection.py
src/esxi_testing_toolkit/: __main__.py
src/esxi_testing_toolkit/cli/: base_commands.py  host_commands.py  vm_commands.py
src/esxi_testing_toolkit/core/: config_manager.py  connection.py
