[project]
name = "esxi-testing-toolkit"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "typer~=0.15.1",
    "xmltodict~=0.14.2",
    "requests~=2.32.3",
    "python-dotenv",
    "paramiko~=3.5.0",
    "tabulate~=0.9.0"
]
[project.scripts]
esxi-testing-toolkit = "main:main"